[package]
name = "vcypher"
version = "1.1.0"
authors = ["WTroll <WTrol25@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
base64 = "0.13.0"
clap = "2.33.3"


